<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.diegoorozco.retopracticas.MainActivity"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/Contador"
        android:textSize="30dp"
        android:gravity="center_horizontal"
        android:textColor="@color/black"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cuenta"
        android:textSize="200dp"
        android:gravity="center_horizontal"
        android:id="@+id/tcontador"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Ingresar"
        android:textSize="20dp"
        android:gravity="center_horizontal"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/eTextoIngresado"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/green"
        android:text="@string/bVentana"
        android:textColor="@color/white"
        android:textSize="22dp"
        android:id="@+id/bVentana"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/bBorrar"
        android:layout_gravity="center_horizontal"
        android:id="@+id/bBorrar"/>

</LinearLayout>
